[REFACTOR] Vendor 생성 및 상세 조회 기능 추가 및 리팩토링